--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "techbot,
   "version": "1.0.0",
-  "description": "Repo for the [DJS turorials](https://www.youtube.com/watch?v=UcLspwognk0&list=PLWnw41ah3I4ZfNLV3by7nB6JO2WcCc3Wj) on [MenuDocs](https://www.youtube.com/channel/UCpGGFqJP9vYvzFudqnQ-6IA)",
+  "description": "Tech ma bot",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
